several alignment issues were resolved

--- a/docusaurus/src/pages/features-section/features-section.css
+++ b/docusaurus/src/pages/features-section/features-section.css
@@ -6,6 +6,7 @@
 }
 
 #featuresSection {
+  z-index: 2;
   margin-top: -220px;
   display: -webkit-box;
   display: -ms-flexbox;
