--- a/docusaurus/src/pages/honors-and-awards-section/honors-and-awards-section.css
+++ b/docusaurus/src/pages/honors-and-awards-section/honors-and-awards-section.css
@@ -5,7 +5,14 @@
   overflow-x: hidden;
 }
 
+section{
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
 #honorsAndAwardsSection {
+  overflow-x: hidden;
+  overflow-y: hidden;
     width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
